--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css" integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="https://i.ibb.co/6YPKJXD/favicon.png" type="image/x-icon">
 
     <title>Finix - Loans and Funding Agency HTML Template</title>
     
@@ -128,6 +128,7 @@
                     <div class="about-text-inner">
                       <h2>25</h2>
                     <p>Years Of Experience</p>
+                    
                     </div>
                   </div>
                 </div>
@@ -162,7 +163,7 @@
                     <h6>Transparent process</h6>
                     <h2>Why people choose us</h2>
                     <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                    <img src="img/choose.png" alt="">
+                    <img src="https://i.ibb.co/rkyn4DJ/choose.png" alt="">
 
                     <a href="#" class="paly-animation-btn"><i class="fa fa-play-circle" aria-hidden="true"></i></a>
                   </div>
